--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Shopping Cart</title>
+  <script src="https://kit.fontawesome.com/418fe35c29.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
