--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Shopely Shopping</title>
+		<script
+			src="https://kit.fontawesome.com/418fe35c29.js"
+			crossorigin="anonymous"
+		></script>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shopely Shopping</title>
-  <script src="https://kit.fontawesome.com/418fe35c29.js" crossorigin="anonymous"></script>
-</head>
+		<linkz
+			href="https://db.onlinewebfonts.com/c/a575313c6dc4fd00c1a9506e1c3ea4fc?family=Euclid+Circular+A"
+			rel="stylesheet"
+			type="text/css"
+		/>
+	</head>
 
-<body>
-  <div id="root"></div>
-</body>
-
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
